--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://Kavimaleesha.github.io/myportfolio",
+  "homepage": "https://Kavimaleesha.github.io/myportfolio",
   "name": "portfolio",
   "version": "0.1.0",
   "private": true,
