--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
   "scripts": {
     "start": "react-scripts start",
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d build -r https://Kavimaleesha.github.io/myportfolio",
+    "deploy": "gh-pages -d build -b master",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
